feat: added facades & changed service provider name

--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Gerenuk\\SpotifyForLaravel\\SpotifyServiceProvider"
+                "SpotifyForLaravelServiceProvider"
             ],
             "aliases": {
                 "Spotify": "Gerenuk\\SpotifyForLaravel\\Facades\\Spotify"
