--- a/composer.json
+++ b/composer.json
@@ -63,10 +63,12 @@
     "extra": {
         "laravel": {
             "providers": [
-                "SpotifyForLaravelServiceProvider"
+                "Gerenuk\\SpotifyForLaravel\\SpotifyForLaravelServiceProvider"
             ],
             "aliases": {
-                "Spotify": "Gerenuk\\SpotifyForLaravel\\Facades\\Spotify"
+                "Spotify": "Gerenuk\\SpotifyForLaravel\\Facades\\Spotify",
+                "SpotifyAuth": "Gerenuk\\SpotifyForLaravel\\Facades\\SpotifyAuth",
+                "SpotifyClient": "Gerenuk\\SpotifyForLaravel\\Facades\\SpotifyClient"
             }
         }
     },
