--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,15 @@
 {
     "name": "gerenuk/spotify-for-laravel",
-    "description": "This is my package spotify-for-laravel",
+    "description": "A Laravel wrapper for the Spotify Web API.",
     "keywords": [
         "Gerenuk",
         "laravel",
         "spotify",
-        "spotify-for-laravel"
+        "laravel-spotify",
+        "spotify-for-laravel",
+        "spotify-api",
+        "spotify-web-api",
+        "spotify-auth"
     ],
     "homepage": "https://github.com/gerenuk-ltd/spotify-for-laravel",
     "license": "MIT",
@@ -48,7 +52,7 @@
     "scripts": {
         "post-autoload-dump": "@composer run prepare",
         "prepare": "@php vendor/bin/testbench package:discover --ansi",
-        "analyse": "vendor/bin/phpstan analyse",
+        "analyse": "vendor/bin/phpstan analyse --memory-limit=2G",
         "test": "vendor/bin/pest",
         "test-coverage": "vendor/bin/pest --coverage",
         "format": "vendor/bin/pint"
